--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,5 +1,7 @@
 spring:
+  profiles:
+    active: test
   datasource:
-    url: jdbc:mysql://localhost:3306/vollmed_api_test?createDatabaseIfNotExist=true&serverTimezone=UTC
-    username: root
-    password: Pato123
+    url: jdbc:mysql://${DB_HOST}}/${DB_NAME}}?createDatabaseIfNotExist=true&serverTimezone=UTC
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
